--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.23.0
+  firebase_auth: ^3.10.0
+  provider: ^6.0.3
+  cloud_firestore: ^3.2.1
+  email_validator: ^2.0.1
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
