--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,7 @@
     "source": "functions"
   },
   "hosting": {
+    "site": "itschedule.web.app",
     "public": "build/web",
     "ignore": [
       "firebase.json",
