--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   email_validator: ^2.0.1
   firebase_core: ^1.18.0
   fluttertoast: ^8.0.9
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   integration_test:
